Performing a few thousand mass linter-suggested changes to improve performance and readability.