@@ -6,20 +6,20 @@ import org.junit.Test;
 import java.util.*;
 
 public class SingleEliminationPairingTest {
-    private SingleEliminationPairing _pairing = new SingleEliminationPairing("singleElimination");
+    private final SingleEliminationPairing _pairing = new SingleEliminationPairing("singleElimination");
 
     @Test
     public void correctlyDetectsFinishedTournament() {
-        Set<String> allPlayers = new HashSet<String>(Arrays.asList("p1", "p2", "p3", "p4"));
-        Set<String> playersWithoutFirst = new HashSet<String>(Arrays.asList("p2", "p3", "p4"));
-        Set<String> playersWithoutTwo = new HashSet<String>(Arrays.asList("p3", "p4"));
-        Set<String> playersWithoutThree = new HashSet<String>(Arrays.asList("p4"));
+        Set<String> allPlayers = new HashSet<>(Arrays.asList("p1", "p2", "p3", "p4"));
+        Set<String> playersWithoutFirst = new HashSet<>(Arrays.asList("p2", "p3", "p4"));
+        Set<String> playersWithoutTwo = new HashSet<>(Arrays.asList("p3", "p4"));
+        Set<String> playersWithoutThree = new HashSet<>(List.of("p4"));
 
         assertTrue(_pairing.isFinished(1, allPlayers, allPlayers));
         assertTrue(_pairing.isFinished(1, allPlayers, playersWithoutFirst));
         assertFalse(_pairing.isFinished(1, allPlayers, playersWithoutTwo));
         assertFalse(_pairing.isFinished(1, allPlayers, playersWithoutThree));
-        assertFalse(_pairing.isFinished(1, allPlayers, Collections.<String>emptySet()));
+        assertFalse(_pairing.isFinished(1, allPlayers, Collections.emptySet()));
     }
 
     @Test
@@ -29,17 +29,17 @@ public class SingleEliminationPairingTest {
 
     @Test
     public void pairingDoneCorrectlyForEvenNumberOfPlayers() {
-        Set<String> allPlayers = new HashSet<String>(Arrays.asList("p1", "p2", "p3", "p4"));
+        Set<String> allPlayers = new HashSet<>(Arrays.asList("p1", "p2", "p3", "p4"));
 
-        Map<String, String> pairingResults = new HashMap<String, String>();
-        Set<String> byeResults = new HashSet<String>();
+        Map<String, String> pairingResults = new HashMap<>();
+        Set<String> byeResults = new HashSet<>();
 
-        assertFalse(_pairing.pairPlayers(1, allPlayers, Collections.<String>emptySet(), Collections.<String, Integer>emptyMap(), null, null, pairingResults, byeResults));
+        assertFalse(_pairing.pairPlayers(1, allPlayers, Collections.emptySet(), Collections.emptyMap(), null, null, pairingResults, byeResults));
 
         assertEquals(0, byeResults.size());
         assertEquals(2, pairingResults.size());
 
-        Set<String> pairedPlayers = new HashSet<String>();
+        Set<String> pairedPlayers = new HashSet<>();
         for (Map.Entry<String, String> pairing : pairingResults.entrySet()) {
             pairedPlayers.add(pairing.getKey());
             pairedPlayers.add(pairing.getValue());
@@ -50,17 +50,17 @@ public class SingleEliminationPairingTest {
 
     @Test
     public void pairingDoneCorrectlyForOddNumberOfPlayers() {
-        Set<String> allPlayers = new HashSet<String>(Arrays.asList("p1", "p2", "p3"));
+        Set<String> allPlayers = new HashSet<>(Arrays.asList("p1", "p2", "p3"));
 
-        Map<String, String> pairingResults = new HashMap<String, String>();
-        Set<String> byeResults = new HashSet<String>();
+        Map<String, String> pairingResults = new HashMap<>();
+        Set<String> byeResults = new HashSet<>();
 
-        assertFalse(_pairing.pairPlayers(1, allPlayers, Collections.<String>emptySet(), Collections.<String, Integer>emptyMap(), null, null, pairingResults, byeResults));
+        assertFalse(_pairing.pairPlayers(1, allPlayers, Collections.emptySet(), Collections.emptyMap(), null, null, pairingResults, byeResults));
 
         assertEquals(1, byeResults.size());
         assertEquals(1, pairingResults.size());
 
-        Set<String> pairedPlayers = new HashSet<String>();
+        Set<String> pairedPlayers = new HashSet<>();
         pairedPlayers.addAll(byeResults);
         for (Map.Entry<String, String> pairing : pairingResults.entrySet()) {
             pairedPlayers.add(pairing.getKey());
@@ -72,23 +72,23 @@ public class SingleEliminationPairingTest {
 
     @Test
     public void playerWithLowestNumberOfByesGetsIt() {
-        Set<String> allPlayers = new HashSet<String>(Arrays.asList("p1", "p2", "p3"));
+        Set<String> allPlayers = new HashSet<>(Arrays.asList("p1", "p2", "p3"));
 
-        Map<String, String> pairingResults = new HashMap<String, String>();
-        Set<String> byeResults = new HashSet<String>();
+        Map<String, String> pairingResults = new HashMap<>();
+        Set<String> byeResults = new HashSet<>();
 
-        Map<String, Integer> playerByes = new HashMap<String, Integer>();
+        Map<String, Integer> playerByes = new HashMap<>();
         playerByes.put("p1", 1);
         playerByes.put("p2", 2);
         playerByes.put("p3", 3);
 
-        assertFalse(_pairing.pairPlayers(1, allPlayers, Collections.<String>emptySet(), playerByes, null, null, pairingResults, byeResults));
+        assertFalse(_pairing.pairPlayers(1, allPlayers, Collections.emptySet(), playerByes, null, null, pairingResults, byeResults));
 
         assertEquals(1, byeResults.size());
         assertTrue(byeResults.contains("p1"));
         assertEquals(1, pairingResults.size());
 
-        Set<String> pairedPlayers = new HashSet<String>();
+        Set<String> pairedPlayers = new HashSet<>();
         pairedPlayers.addAll(byeResults);
 
         for (Map.Entry<String, String> pairing : pairingResults.entrySet()) {
@@ -101,18 +101,18 @@ public class SingleEliminationPairingTest {
     
     @Test
     public void droppedPlayersNotIncluded() {
-        Set<String> allPlayers = new HashSet<String>(Arrays.asList("p1", "p2", "p3", "p4"));
-        Set<String> droppedPlayers = new HashSet<String>(Arrays.asList("p4"));
+        Set<String> allPlayers = new HashSet<>(Arrays.asList("p1", "p2", "p3", "p4"));
+        Set<String> droppedPlayers = new HashSet<>(List.of("p4"));
 
-        Map<String, String> pairingResults = new HashMap<String, String>();
-        Set<String> byeResults = new HashSet<String>();
+        Map<String, String> pairingResults = new HashMap<>();
+        Set<String> byeResults = new HashSet<>();
 
-        assertFalse(_pairing.pairPlayers(1, allPlayers, droppedPlayers, Collections.<String, Integer>emptyMap(), null, null, pairingResults, byeResults));
+        assertFalse(_pairing.pairPlayers(1, allPlayers, droppedPlayers, Collections.emptyMap(), null, null, pairingResults, byeResults));
 
         assertEquals(1, byeResults.size());
         assertEquals(1, pairingResults.size());
 
-        Set<String> pairedPlayers = new HashSet<String>();
+        Set<String> pairedPlayers = new HashSet<>();
         pairedPlayers.addAll(byeResults);
         for (Map.Entry<String, String> pairing : pairingResults.entrySet()) {
             pairedPlayers.add(pairing.getKey());
